force-app/main/default/objects/Account/fields/Abandon__c.field-meta.xml
<CustomField>
    <fullName>Abandon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abandon</label>
    <type>Checkbox</type>
</CustomField>