force-app/main/default/objects/Account/fields/Absence_de_device_existante__c.field-meta.xml
<CustomField>
    <fullName>Absence_de_device_existante__c</fullName>
    <label>Absence de device existante</label>
    <summaryFilterItems>
        <field>Anomalie__c.Type__c</field>
        <operation>equals</operation>
        <value>Absence de device associé</value>
    </summaryFilterItems>
    <summaryForeignKey>Anomalie__c.PUDO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>