force-app/main/default/objects/Account/fields/Absence_de_device_ouverte__c.field-meta.xml
<CustomField>
    <fullName>Absence_de_device_ouverte__c</fullName>
    <description>Ce champ permet de savoir si une absence de device associé est ouverte sur le PUDO. Se base sur l&#39;objet anomalie</description>
    <label>Absence de device ouverte</label>
    <summaryFilterItems>
        <field>Anomalie__c.Type__c</field>
        <operation>equals</operation>
        <value>Absence de device associé</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Anomalie__c.Statut__c</field>
        <operation>equals</operation>
        <value>Ouvert</value>
    </summaryFilterItems>
    <summaryForeignKey>Anomalie__c.PUDO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>