force-app/main/default/objects/Account/fields/Acces_handicape__c.field-meta.xml
<CustomField>
    <fullName>Acces_handicape__c</fullName>
    <label>Accès handicapé</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>