force-app/main/default/objects/Account/fields/Accessibilite__c.field-meta.xml
<CustomField>
    <fullName>Accessibilite__c</fullName>
    <label>Accessibilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>