force-app/main/default/objects/Account/fields/Accord_prealable_backup__c.field-meta.xml
<CustomField>
    <fullName>Accord_prealable_backup__c</fullName>
    <inlineHelpText>Le relais émet le souhait d’être backup.</inlineHelpText>
    <label>Accord préalable backup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>