force-app/main/default/objects/Account/fields/Activite_commerciale_eligible__c.field-meta.xml
<CustomField>
    <fullName>Activite_commerciale_eligible__c</fullName>
    <formula>IF( 
OR(
ispickval (Activite_commerciale_principale__c ,&quot;23&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;31&quot;),  
ispickval (Activite_commerciale_principale__c ,&quot;36&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;42&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;49&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;67&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;73&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;76&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;87&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;91&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;66&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;81&quot;),
ispickval (Activite_commerciale_principale__c ,&quot;3342&quot;),
ispickval (Industry,&quot;2&quot;)
),
       IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
       IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activité commerciale éligible</label>
    <type>Text</type>
</CustomField>