force-app/main/default/objects/Account/fields/Activite_commerciale_principale__c.field-meta.xml
<CustomField>
    <fullName>Activite_commerciale_principale__c</fullName>
    <label>Activité commerciale principale</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_ACT</valueSetName>
    </valueSet>
</CustomField>