force-app/main/default/objects/Account/fields/Adresse_courrier__c.field-meta.xml
<CustomField>
    <fullName>Adresse_courrier__c</fullName>
    <label>Adresse courrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SHIPPING</fullName>
            </value>
            <value>
                <fullName>BILLING</fullName>
                <default>true</default>
                <label>BILLING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>