force-app/main/default/objects/Account/fields/Adresse_de_livraison_fiabilisee__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison_fiabilisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adresse de livraison fiabilisée</label>
    <type>Checkbox</type>
</CustomField>