force-app/main/default/objects/Account/fields/Age_etat2__c.field-meta.xml
<CustomField>
    <fullName>Age_etat2__c</fullName>
    <description>Calcul l&#39;age en jours depuis le passage en état 2</description>
    <formula>today()- Date_de_passage_etat2__c</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>