force-app/main/default/objects/Account/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <label>Agence</label>
    <length>30</length>
    <type>Text</type>
</CustomField>