force-app/main/default/objects/Account/fields/Amplitude_horaire_40_h__c.field-meta.xml
<CustomField>
    <fullName>Amplitude_horaire_40_h__c</fullName>
    <formula>IF(   Amplitude_horaire_du_relais__c &gt;= 40,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amplitude horaire &gt;= 40 h</label>
    <type>Text</type>
</CustomField>