force-app/main/default/objects/Account/fields/Amplitude_horaire_du_relais__c.field-meta.xml
<CustomField>
    <fullName>Amplitude_horaire_du_relais__c</fullName>
    <label>Amplitude horaire du relais</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>