force-app/main/default/objects/Account/fields/Amplitude_horaire_faible_en_h__c.field-meta.xml
<CustomField>
    <fullName>Amplitude_horaire_faible_en_h__c</fullName>
    <label>Amplitude horaire faible (en h)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>