force-app/main/default/objects/Account/fields/Anomalie_de_synchro_ouverte__c.field-meta.xml
<CustomField>
    <fullName>Anomalie_de_synchro_ouverte__c</fullName>
    <description>Ce champ permet de savoir si une anomalie de synchro est ouverte sur le PUDO. Se base sur l&#39;objet anomalie.</description>
    <label>Anomalie de synchro ouverte</label>
    <summaryFilterItems>
        <field>Anomalie__c.Ouvert_SyncPudo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Anomalie__c.PUDO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>