force-app/main/default/objects/Account/fields/Appareil_photo_camera__c.field-meta.xml
<CustomField>
    <fullName>Appareil_photo_camera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appareil photo/caméra</label>
    <type>Checkbox</type>
</CustomField>