force-app/main/default/objects/Account/fields/AR_infos_importantes__c.field-meta.xml
<CustomField>
    <fullName>AR_infos_importantes__c</fullName>
    <formula>IF( CONTAINS($Label.RT_France_Compte , RecordType.Id ) , Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.FirstName &amp; &quot; &quot;&amp; Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.LastName &amp; &quot; - &quot; &amp; Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Phone &amp; &quot; - &quot; &amp; HYPERLINK(Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, &quot;_self&quot;), 
IF( AND(NOT(CONTAINS($Label.RT_France_Compte , RecordType.Id )), 
NOT(ISBLANK(Zone_dimplantation__r.Responsable__c))), 
Zone_dimplantation__r.Responsable__r.FirstName &amp; &quot; &quot;&amp; Zone_dimplantation__r.Responsable__r.LastName &amp; &quot; - &quot; &amp; Zone_dimplantation__r.Responsable__r.Phone &amp; &quot; - &quot; &amp; HYPERLINK(Zone_dimplantation__r.Responsable__r.Email, Zone_dimplantation__r.Responsable__r.Email, &quot;_self&quot;), 

&quot; &quot;))</formula>
    <label>AR</label>
    <type>Text</type>
</CustomField>