force-app/main/default/objects/Account/fields/AR_suppleant__c.field-meta.xml
<CustomField>
    <fullName>AR_suppleant__c</fullName>
    <formula>IF( CONTAINS($Label.RT_France_Compte , RecordType.Id ) , 
Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.FirstName &amp; &quot; &quot;&amp;  Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.LastName &amp; &quot; - &quot; &amp;  Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Phone &amp; &quot; - &quot; &amp;   HYPERLINK(Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.Email, &quot;_self&quot;), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR suppléant</label>
    <type>Text</type>
</CustomField>