force-app/main/default/objects/Account/fields/AR_suppleant_infos_importantes__c.field-meta.xml
<CustomField>
    <fullName>AR_suppleant_infos_importantes__c</fullName>
    <formula>IF(
       AND(
              Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Activer_l_AR_suppleant__c,
              CONTAINS($Label.RT_France_Compte , RecordType.Id) 
           ), 

Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.FirstName &amp; &quot; &quot;&amp;  Zone_dimplantation__r.Secteur_parent__r.Secteur_parent__r.Responsable__r.LastName, 


&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR suppléant</label>
    <type>Text</type>
</CustomField>