force-app/main/default/objects/Account/fields/Association_Reseau__c.field-meta.xml
<CustomField>
    <fullName>Association_Reseau__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Réseau(x) associé(s) à la consigne</inlineHelpText>
    <label>Check Association Réseau</label>
    <type>Checkbox</type>
</CustomField>