force-app/main/default/objects/Account/fields/Assujetti_la_TVA__c.field-meta.xml
<CustomField>
    <fullName>Assujetti_la_TVA__c</fullName>
    <label>Assujetti à la TVA ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>