force-app/main/default/objects/Account/fields/Calendrier_d_instance__c.field-meta.xml
<CustomField>
    <fullName>Calendrier_d_instance__c</fullName>
    <label>Calendrier d&#39;instance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ouvré</fullName>
                <default>true</default>
                <label>Ouvré</label>
            </value>
            <value>
                <fullName>Calendaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>