force-app/main/default/objects/Account/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <description>Montant de capital générique associé à la devise</description>
    <label>Capital</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>