force-app/main/default/objects/Account/fields/Capital_EUR__c.field-meta.xml
<CustomField>
    <fullName>Capital_EUR__c</fullName>
    <label>Capital (EUR)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>