force-app/main/default/objects/Account/fields/Capital_HUF__c.field-meta.xml
<CustomField>
    <fullName>Capital_HUF__c</fullName>
    <label>Capital (HUF)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>