force-app/main/default/objects/Account/fields/Cause_abandon__c.field-meta.xml
<CustomField>
    <fullName>Cause_abandon__c</fullName>
    <label>Cause abandon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potentiel insuffisant</fullName>
            </value>
            <value>
                <fullName>Faisabilité technique</fullName>
            </value>
            <value>
                <fullName>Manque de place</fullName>
            </value>
            <value>
                <fullName>Refus Bailleur</fullName>
            </value>
            <value>
                <fullName>Coût élevé</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>