force-app/main/default/objects/Account/fields/Champs_obligatoires_pour_soumission_INT__c.field-meta.xml
<CustomField>
    <fullName>Champs_obligatoires_pour_soumission_INT__c</fullName>
    <formula>IF(Type_de_device_Selected__c = 0,$Label.TypeDeDevice,&quot;&quot;) 
&amp;IF(ISBLANK( Macroprofil_actuel__c),$Label.Macroprofil_actuel , &quot;&quot;) 
&amp;IF(ISBLANK( ShippingAddress ),$Label.ShippingAddress,&quot;&quot;) 
&amp;IF(ISBLANK( BillingAddress ),$Label.BillingAddress,&quot;&quot;)
&amp;IF(ISBLANK( Long_Lat_adresse_de_livraison__c ),$Label.LogLat,&quot;&quot;) 
&amp;IF(ISBLANK( Contact_operationnel_1__c ),$Label.ContactOperationnel,&quot;&quot;) 
&amp;IF(ISBLANK( Responsable_facturation__c ),$Label.RespFacturation,&quot;&quot;)
&amp;IF(ISBLANK( Nom_Responsable_magasin__c ),$Label.ResponsableMagasin,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champs obligatoires pour soumission</label>
    <type>Text</type>
</CustomField>