force-app/main/default/objects/Account/fields/Cle_Deal__c.field-meta.xml
<CustomField>
    <fullName>Cle_Deal__c</fullName>
    <label>Clé Deal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>