force-app/main/default/objects/Account/fields/Code_BIC__c.field-meta.xml
<CustomField>
    <fullName>Code_BIC__c</fullName>
    <label>Code BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>