force-app/main/default/objects/Account/fields/Code_Pays__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays__c</fullName>
    <label>Code Pays</label>
    <length>7</length>
    <type>Text</type>
</CustomField>