force-app/main/default/objects/Account/fields/Code_postal__c.field-meta.xml
<CustomField>
    <fullName>Code_postal__c</fullName>
    <label>Code postal</label>
    <length>19</length>
    <type>Text</type>
</CustomField>