force-app/main/default/objects/Account/fields/Codification_chez_gestionnaire_de_parc__c.field-meta.xml
<CustomField>
    <fullName>Codification_chez_gestionnaire_de_parc__c</fullName>
    <label>Codification chez gestionnaire de parc</label>
    <length>15</length>
    <type>Text</type>
</CustomField>