force-app/main/default/objects/Account/fields/Colocalise_avec__c.field-meta.xml
<CustomField>
    <fullName>Colocalise_avec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colocalisé avec</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Pickup store, Agence, Partenaire, Standard, Pickup contact</value>
        </filterItems>
        <infoMessage>Veuillez sélectionner un point supervisé ou non supervisé.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Colocalisé avec</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>