force-app/main/default/objects/Account/fields/Commentaire_s__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_s__c</fullName>
    <label>Commentaire(s)</label>
    <type>TextArea</type>
</CustomField>