force-app/main/default/objects/Account/fields/Commentaires_Actif_sans_Scan__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_Actif_sans_Scan__c</fullName>
    <description>Champ utilisé en vue de liste pour les campagnes ponctuelles</description>
    <label>Commentaires Actif sans Scan</label>
    <type>TextArea</type>
</CustomField>