force-app/main/default/objects/Account/fields/Commentaires_Conges__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_Conges__c</fullName>
    <description>Champ utilisé en vue de liste pour les campagnes ponctuelles</description>
    <label>Commentaires Congés</label>
    <type>TextArea</type>
</CustomField>