force-app/main/default/objects/Account/fields/Commentaires_Horaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_Horaires__c</fullName>
    <description>Champ utilisé en vue de liste pour les campagnes ponctuelles</description>
    <label>Commentaires Horaires</label>
    <type>TextArea</type>
</CustomField>