force-app/main/default/objects/Account/fields/Commentaires_Inactif_avec_Scan__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_Inactif_avec_Scan__c</fullName>
    <description>Champ utilisé en vue de liste pour les campagnes ponctuelles</description>
    <label>Commentaires Inactif avec Scan</label>
    <type>TextArea</type>
</CustomField>