force-app/main/default/objects/Account/fields/Commentaires_spec_consigne__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_spec_consigne__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>